<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/large2x_indent"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_button_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginEnd="@dimen/header_text"
        android:contentDescription="@string/logout"
        android:src="@drawable/ic_button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_text"
        style="@style/TextAppearance.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginEnd="@dimen/header_text"
        android:text="@string/nav_menu_settings"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search" />

    <TextView
        android:id="@+id/profile"
        style="@style/TextAppearance.Body0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:paddingTop="@dimen/large_indent"
        android:paddingBottom="@dimen/large_indent"
        android:text="@string/profil"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/header_text"
        app:layout_constraintTop_toBottomOf="@id/header_text" />

    <TextView
        android:id="@+id/notification"
        style="@style/TextAppearance.Body0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_indent"
        android:paddingTop="@dimen/large_indent"
        android:paddingBottom="@dimen/large_indent"
        android:text="@string/notification"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/header_text"
        app:layout_constraintTop_toBottomOf="@id/profile" />

    <TextView
        android:id="@+id/privacy"
        style="@style/TextAppearance.Body0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_indent"
        android:paddingTop="@dimen/large_indent"
        android:paddingBottom="@dimen/large_indent"
        android:text="@string/privacy"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/header_text"
        app:layout_constraintTop_toBottomOf="@id/notification" />
</androidx.constraintlayout.widget.ConstraintLayout>