<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/s_indent"
    android:layout_marginBottom="@dimen/s_indent"
    app:cardCornerRadius="@dimen/large_indent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_height_image"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/large_indent">

            <TextView
                android:id="@+id/event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textAppearance="@style/TextAppearance.Headline"
                android:textColor="?attr/colorPrimary"/>

            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_indent"
                android:text="@string/event_date"
                android:textAppearance="@style/TextAppearance.Body2"
                android:textColor="?attr/colorSecondary"/>

            <TextView
                android:id="@+id/event_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_indent"
                android:text="@string/event_text"
                android:textAppearance="@style/TextAppearance.Body1"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>