<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    tools:context="ui.settings.ProfileFragment">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginStart="@dimen/header_text"
        android:src="@drawable/ic_button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_back" />

    <ImageView
        android:id="@+id/button_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginEnd="@dimen/header_text"
        android:src="@drawable/ic_button_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/button_edit" />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginEnd="@dimen/header_text"
        style="@style/TextAppearance.Headline"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="@id/button_edit"
        app:layout_constraintTop_toBottomOf="@id/button_back"/>

    <ImageView
        android:id="@+id/user_logo"
        android:layout_width="@dimen/user_logo_size_settings_in_profil"
        android:layout_height="@dimen/user_logo_size_settings_in_profil"
        android:layout_marginTop="@dimen/header_top_margin"
        android:src="@drawable/ic_image_not_supported_96"
        app:layout_constraintStart_toStartOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="@id/button_edit"
        app:layout_constraintTop_toBottomOf="@id/header_text"
        android:contentDescription="@string/settings_user_logo" />

    <EditText
        android:id="@+id/user_nickname"
        style="@style/TextAppearance.Body1"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginEnd="@dimen/header_text"
        android:background="@drawable/chat_edit_text_input_background"
        android:gravity="center"
        android:hint="@string/user_nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_logo" />
    <EditText
        android:id="@+id/user_name"
        style="@style/TextAppearance.Body1"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginEnd="@dimen/header_text"
        android:background="@drawable/chat_edit_text_input_background"
        android:gravity="center"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_nickname" />

    <EditText
        android:id="@+id/user_surname"
        style="@style/TextAppearance.Body1"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginEnd="@dimen/header_text"
        android:background="@drawable/chat_edit_text_input_background"
        android:gravity="center"
        android:hint="@string/user_family"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

</androidx.constraintlayout.widget.ConstraintLayout>