<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    tools:context="ui.registration.InputUserDataFragment">

    <TextView
        android:id="@+id/header_text"
        style="@style/TextAppearance.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="@dimen/header_text"
        android:text="@string/registration_user_info_header"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_user_name"
        style="@style/TextAppearance.Body1"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginEnd="@dimen/header_text"
        android:background="@drawable/chat_edit_text_input_background"
        android:gravity="center"
        android:hint="@string/user_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text" />

    <EditText
        android:id="@+id/enter_user_surname"
        style="@style/TextAppearance.Body1"
        android:layout_width="0dp"
        android:layout_height="@dimen/text_input_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginEnd="@dimen/header_text"
        android:background="@drawable/chat_edit_text_input_background"
        android:gravity="center"
        android:hint="@string/user_family"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_user_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginEnd="@dimen/header_text"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_user_surname" />

</androidx.constraintlayout.widget.ConstraintLayout>