<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white"
    tools:context=".ui.chat.ChatFragment">

    <ImageView
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginStart="@dimen/header_text"
        android:src="@drawable/ic_button_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large2x_indent"
        android:layout_marginEnd="@dimen/header_text"
        android:src="@drawable/ic_button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Сообщения"
        android:layout_marginTop="@dimen/header_top_margin"
        android:layout_marginStart="@dimen/header_text"
        android:layout_marginEnd="@dimen/header_text"
        style="@style/TextAppearance.Headline"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/chat_tabs"
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large2x_indent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_text"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_tab_region" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_tab_city" />

        <!--<com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_tab_channels" />-->
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/large_indent"
        android:layout_marginTop="@dimen/large_indent"
        app:layout_constraintBottom_toTopOf="@id/message_chat_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_tabs" />



            <ImageView
                android:id="@+id/add_message_image_view"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/add_image"
                android:src="@drawable/ic_button_add"
                android:layout_marginStart="@dimen/large_indent"
                android:layout_marginEnd="@dimen/large_indent"
                app:layout_constraintTop_toTopOf="@id/message_chat_input"
                app:layout_constraintBottom_toBottomOf="@id/message_chat_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/message_chat_input"/>

            <EditText
                android:id="@+id/message_chat_input"
                android:layout_width="0dp"
                android:layout_height="@dimen/text_input_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/large_indent"
                android:layout_marginTop="@dimen/large_indent"
                android:background="@drawable/chat_edit_text_input_background"
                android:hint="@string/input_message"
                android:imeOptions="actionSend"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/s_indent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_message_image_view"
                app:layout_constraintEnd_toStartOf="@id/send_button"/>

            <ImageView
                android:id="@+id/send_button"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:contentDescription="@string/send_message"
                android:enabled="false"
                android:src="@drawable/ic_button_send_inactive"
                android:layout_marginEnd="@dimen/large_indent"
                android:layout_marginStart="@dimen/large_indent"
                app:layout_constraintTop_toTopOf="@id/message_chat_input"
                app:layout_constraintBottom_toBottomOf="@id/message_chat_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/message_chat_input"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>